--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,10 +4,20 @@
     height: 20px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 5px 25px;
 }
 
 .footer > span, a {
     color: #ccc;
+}
+
+@media only screen and (max-width: 600px) { 
+    .footer {
+
+        bottom: 0;
+        position: absolute;
+        width: 100vw;
+        padding: 5px 0px;
+        justify-content: space-around;
+    }
 }
